--- a/public/styles.css
+++ b/public/styles.css
@@ -760,6 +760,12 @@ body{
 .z-20{
   z-index: 20;
 }
+.order-1{
+  order: 1;
+}
+.order-2{
+  order: 2;
+}
 .m-auto{
   margin: auto;
 }
@@ -834,6 +840,12 @@ body{
 .h-20{
   height: 5rem;
 }
+.h-\[250px\]{
+  height: 250px;
+}
+.h-\[350px\]{
+  height: 350px;
+}
 .max-h-96{
   max-height: 24rem;
 }
@@ -901,6 +913,18 @@ body{
 }
 .gap-2{
   gap: 0.5rem;
+}
+.gap-40{
+  gap: 10rem;
+}
+.gap-24{
+  gap: 6rem;
+}
+.gap-16{
+  gap: 4rem;
+}
+.gap-10{
+  gap: 2.5rem;
 }
 .gap-x-6{
   -moz-column-gap: 1.5rem;
@@ -996,6 +1020,10 @@ body{
 .bg-dark-100{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-100), var(--tw-bg-opacity));
+}
+.bg-yellow-100{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--yellow-100), var(--tw-bg-opacity));
 }
 .bg-opacity-90{
   --tw-bg-opacity: 0.9;
@@ -1119,8 +1147,14 @@ body{
 .pb-32{
   padding-bottom: 8rem;
 }
+.text-left{
+  text-align: left;
+}
 .text-center{
   text-align: center;
+}
+.align-middle{
+  vertical-align: middle;
 }
 .text-\[1\.25rem\]{
   font-size: 1.25rem;
@@ -1198,6 +1232,14 @@ body{
 .text-dark-200{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-200), var(--tw-text-opacity));
+}
+.underline{
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+.decoration-solid{
+  -webkit-text-decoration-style: solid;
+          text-decoration-style: solid;
 }
 .opacity-0{
   opacity: 0;
@@ -1398,6 +1440,21 @@ body{
   color: rgba(var(--dark-100), var(--tw-text-opacity));
 }
 
+.hover\:text-primary-500:hover{
+  --tw-text-opacity: 1;
+  color: rgba(var(--primary-500), var(--tw-text-opacity));
+}
+
+.hover\:text-primary-600:hover{
+  --tw-text-opacity: 1;
+  color: rgba(var(--primary-600), var(--tw-text-opacity));
+}
+
+.hover\:text-primary-700:hover{
+  --tw-text-opacity: 1;
+  color: rgba(var(--primary-700), var(--tw-text-opacity));
+}
+
 .hover\:underline:hover{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1433,6 +1490,13 @@ body{
     font-weight: 700;
     text-transform: uppercase;
     line-height: 2.5rem;
+  }
+	.md\:title-h3-desktop{
+    font-family: Poppins, sans-serif;
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 2rem;
   }
 
 	.md\:p-xxl{
@@ -1501,6 +1565,9 @@ body{
 	.md\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+	.md\:flex-col{
+    flex-direction: column;
+  }
 	.md\:items-start{
     align-items: flex-start;
   }
@@ -1527,6 +1594,9 @@ body{
     font-weight: 400;
     line-height: 160%;
   }
+	.lg\:order-2{
+    order: 2;
+  }
 	.lg\:mx-0{
     margin-left: 0px;
     margin-right: 0px;
@@ -1552,6 +1622,12 @@ body{
 	.lg\:h-16{
     height: 4rem;
   }
+	.lg\:h-\[350px\]{
+    height: 350px;
+  }
+	.lg\:h-\[650px\]{
+    height: 650px;
+  }
 	.lg\:w-\[45\%\]{
     width: 45%;
   }
@@ -1566,6 +1642,9 @@ body{
   }
 	.lg\:flex-row{
     flex-direction: row;
+  }
+	.lg\:flex-col{
+    flex-direction: column;
   }
 	.lg\:items-center{
     align-items: center;
@@ -1584,6 +1663,9 @@ body{
   }
 	.lg\:gap-6{
     gap: 1.5rem;
+  }
+	.lg\:gap-16{
+    gap: 4rem;
   }
 	.lg\:px-0{
     padding-left: 0px;
